--- a/views/page_ativacao.html
+++ b/views/page_ativacao.html
@@ -4,7 +4,17 @@
 
 {% block main %}
 <h1>Ativação de Conta</h1>
-<h2>Sua conta foi ativada com sucesso!</h2>
+<h2>Você precisa ativar sua conta para prosseguir!</h2>
 
-<h3><a href="/entrar">Entrar no Triz</a></h3>
+{% if msgs is defined %}
+	{% for msg in msgs %}
+		<li>{{ msg }}</li>
+		<h3><a href="/entrar">Entrar no Triz</a></h3>
+	{% endfor %}
+{% endif %}
+
+{% if not msgs is defined %}
+<h3><a href="ativacao/reenviar">Reenviar e-mail de confirmação</a></h3>
+{% endif %}
+
 {% endblock %}
