Formatação de login em template

--- a/views/page_inicio.html
+++ b/views/page_inicio.html
@@ -1,6 +1,6 @@
 {% extends "inc/base.html" %}
 
-{% block title %}Triz{% endblock %}
+{% block title %}Início{% endblock %}
 
 {% block main %}
 <a href="/conta/criar">Crie uma conta Triz</a>
