--- a/views/form_entrar.html
+++ b/views/form_entrar.html
@@ -2,12 +2,69 @@
 
 {% block title %}Entrar{% endblock %}
 
-{% block main %}
-<h1>Entrar</h1>
-<form method="POST" action="/entrar">
-	{% if erros is defined %}{{ erros.0 }}{% endif %}
-	<input type="email" name="email" id="email" placeholder="E-mail" required>		
-	<input type="password" name="senha" id="senha" placeholder="Senha" required>
-	<input type="submit" id="entrar" value="Entrar no Triz">		
-</form>	
+{% block head %}
+	{{ parent() }}
+	<link rel="stylesheet" type="text/css" href="{{ static }}/css/form_entrar.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<style type="text/css">
+		body {
+		  background-color: #f1f1f1;
+		}
+		body > .grid {
+		  height: 100%;
+		}
+		.image {
+		  margin-top: -100px;
+		}
+		.column {
+		  max-width: 450px;
+		}
+		.rt {
+			 !important
+		}
+	</style>
 {% endblock %}
+
+{% block header %}{% endblock %}
+
+{% block main %}
+<div class="ui middle aligned center aligned grid">
+	<div class="column">
+		<h2 class="ui teal image header">
+			<img src="{{ static }}/img/marca/logo_256.png" class="image">
+			<div class="content" style="color:#ef311d">
+				Entre em sua conta Triz
+			</div>
+		</h2>
+		<form method="POST" action="/entrar" class="ui large form">    
+			<div class="ui stacked segment">
+				<div class="field">
+					<div class="ui input">            
+						<input type="email" name="email" id="email" placeholder="E-mail" required>            
+					</div>
+				</div>
+				<div class="field">
+					<div class="ui input">            
+						<input type="password" name="senha" id="senha" placeholder="Senha" required>
+					</div>
+				</div>
+				<input type="submit" id="entrar" value="Entrar no Triz" class="ui fluid large teal submit button" style="background-color: #ef311d">       
+			</div>
+			{% if erros is defined %}
+			<div class="ui visible red error message">		
+				{{ erros.0 }}			
+			</div>
+			{% endif %}
+		</form>
+		<div class="ui message">
+			Novo por aqui? <a href="/conta/criar">Crie uma conta</a>
+		</div>
+		<div>
+			&copy {{ "now"|date("Y") }} MPS. Todos os direitos reservados.
+		</div>
+	</div>
+</div>
+{% endblock %}
+
+{% block footer %}{% endblock %}
