--- a/views/inc/base.html
+++ b/views/inc/base.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         {% block head %}
-		<title>{% block title %}{% endblock %}</title>
+		<title>{% block title %}{% endblock %} - Triz</title>
 		<meta charset="UTF-8">
-		<link rel="shortcut icon" type="image/png" href="{{ static }}/img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="{{ static }}/css/normalize.css">
+		<link rel="shortcut icon" type="image/png" href="{{ static }}/img/favicon.png" sizes="16x16">
+		<link rel="stylesheet" type="text/css" href="{{ static }}/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="{{ static }}/css/semantic.min.css">					
         {% endblock %}
     </head>
