Formatação inicial da página de mural

--- a/views/form_entrar.html
+++ b/views/form_entrar.html
@@ -33,7 +33,7 @@
 	<div class="column">
 		<h2 class="ui teal image header">
 			<img src="{{ static }}/img/marca/logo_256.png" class="image">
-			<div class="content" style="color:#ef311d">
+			<div class="content" style="color:#008B8B">
 				Entre em sua conta Triz
 			</div>
 		</h2>
@@ -49,7 +49,7 @@
 						<input type="password" name="senha" id="senha" placeholder="Senha" required>
 					</div>
 				</div>
-				<input type="submit" id="entrar" value="Entrar no Triz" class="ui fluid large teal submit button" style="background-color: #ef311d">       
+				<input type="submit" id="entrar" value="Entrar no Triz" class="ui fluid large teal submit button" style="background-color: #008B8B">       
 			</div>
 			{% if erros is defined %}
 			<div class="ui visible red error message">		
