--- a/views/inc/base_simples.html
+++ b/views/inc/base_simples.html
@@ -18,18 +18,24 @@
     </head>
     <body>
 		{% block body %}
-		<header>
-			{% block header %}					
-			{% endblock %}
-		</header>
-        <main>
-			{% block main %}{% endblock %}		
-		</main>
-        <footer>
-            {% block footer %}
-            <p class="copyright text-muted small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>
-            {% endblock %}
-        </footer>
+		<div class="container">		
+			<div class="row">		
+				<div class="col-lg-12">
+				<header>				
+					<h1 class="text-center"><a href="/" title="Ir para a página inicial do Triz"><img src="{{ static }}/img/marca/logo_256.png" alt="Triz" style="widht:64px;height:64"></a><h1>
+					<div class="page-header">
+						<h1>{% block titleheader %}Triz{% endblock %}</h1>
+					</div>
+				</header>
+				<main>
+					{% block main %}{% endblock %}		
+				</main>
+				<footer>				
+					<p class="copyright text-muted small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>			
+				</footer>
+				</div>
+			</div>
+		</div>
 		{% endblock %}
 		<script src="{{ static }}/js/jquery.min.js"></script>
 		<script src="{{ static }}/js/bootstrap.min.js"></script>
