--- a/views/page_acesso.html
+++ b/views/page_acesso.html
@@ -1,15 +1,15 @@
-{% extends "inc/base.html" %}
+{% extends "inc/base_simples.html" %}
 
 {% block title %}Acessos a Conta{% endblock %}
+{% block titleheader %}Acessos a Conta{% endblock %}
 
-{% block main %}
-    <h1>Acessos a Conta</h1>
-	<table class="ui basic table">
+{% block main %}    
+	<table class="table table-hover table-condensed">
 	  <thead>
 		<tr>
 		  <th>Data</th>
 		  <th>Hora</th>
-		  <th>Endereço IP</th>
+		  <th>IP</th>
 		</tr>
 	  </thead>
 	  <tbody>
