--- a/views/page_inicio.html
+++ b/views/page_inicio.html
@@ -1,8 +1,186 @@
-{% extends "inc/base.html" %}
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Início - Triz</title>
+	<link rel="stylesheet" type="text/css" href="{{ static }}/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="{{ static }}/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="{{ static }}/css/new-age.min.css">    
+	<style type="text/css">
+		.rose {		
+			background:url(../img/bg-pattern.png),#7b4397;background:url(../img/bg-pattern.png),-webkit-linear-gradient(to left,#7b4397,#dc2430);
+			background:url(../img/bg-pattern.png),linear-gradient(to left,#7b4397,#dc2430);
+			color:#fff;
+		}
+	</style>
+</head>
+<body id="topo">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container">            
+            <div class="navbar-header rose">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    Menu
+                </button>
+                <a class="navbar-brand page-scroll" href="#topo" style="color:white">&nbspTriz</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#planos">Planos</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#caracteristicas">Características</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#conexoes">Conexões</a>
+                    </li>					
+                </ul>
+            </div>            
+        </div>        
+    </nav>
+	
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-7">
+                    <div class="header-content">
+                        <div class="header-content-inner">
+                            <h1>Triz é uma ferramenta case que irá ajudar sua equipe a gerenciar projetos de software</h1>
+                            <a href="/entrar" class="btn btn-outline btn-xl page-scroll">Entrar no Triz!</a>
+                        </div>
+                    </div>
+                </div>
+               <!--<div class="col-sm-5">
+                    <div class="device-container">
+                        <div class="device-mockup iphone6_plus portrait white">
+                            <div class="device">
+                                <div class="screen">                                    
+                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+                                </div>
+                                <div class="button">                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>-->
+            </div>
+        </div>
+    </header>
 
-{% block title %}Início{% endblock %}
+    <section id="planos" class="download bg-primary text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h2 class="section-heading">Triz é gratuito e está disponível para todos os dispositivos</h2>
+                    <p>Use o Triz em seu computador, tablet ou smartphone!</p>                    
+                </div>
+            </div>
+        </div>
+    </section>
 
-{% block main %}
-<a href="/conta/criar">Crie uma conta Triz</a>
-<a href="/mural">Mural</a>
-{% endblock %}
+    <section id="caracteristicas" class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-heading">
+                        <h2>Um pouco sobre o Triz...</h2>
+                        <p class="text-muted">Veja algumas características que o Triz possui!</p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <!--<div class="device-container">
+                        <div class="device-mockup iphone6_plus portrait white">
+                            <div class="device">
+                                <div class="screen">                                    
+                                    <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> </div>
+                                <div class="button">                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>-->
+                </div>
+                <div class="col-md-8">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-screen-smartphone text-primary"></i>
+                                    <h3>Fluxo Scrum</h3>
+                                    <p class="text-muted">Obtenha sucesso gerenciando seus projetos com Scrum</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="feature-item">								
+                                    <i class="icon-camera text-primary"></i>
+                                    <h3>Uso Flexível</h3>
+                                    <p class="text-muted">Realize diversos tipos de tarefas de maneira agradável</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-present text-primary"></i>
+                                    <h3>Interação do Time</h3>
+                                    <p class="text-muted">Esteja sempre próximo a todos os membros do seu time</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="feature-item">
+                                    <i class="icon-lock-open text-primary"></i>
+                                    <h3>Código Aberto</h3>
+                                    <p class="text-muted">Visualize o código-fonte e ajude a melhorar o projeto</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section class="cta">
+        <div class="cta-content">
+            <div class="container">
+                <h2>Não<br>perca<br>tempo!</h2>
+                <a href="/conta/criar" class="btn btn-outline btn-xl page-scroll">Comece agora mesmo!</a>
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </section>
+
+    <section id="conexoes" class="contact bg-primary">
+        <div class="container">
+            <h2>Acompanhe o projeto!</h2> 
+			<h3>Veja o código-fonte no <a href="https://github.com/mpsacademico/triz" target="_blank" style="color:grey">GitHub</a></h3>			
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p class="copyright text-muted small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>
+            <ul class="list-inline">
+                <li>
+                    <a href="#topo">Início</a>
+                </li>
+                <li>
+                    <a href="/termos">Termos</a>
+                </li>
+                <li>
+                    <a href="/sobre">Sobre</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+	
+	<script src="{{ static }}/js/jquery.min.js"></script>
+	<script src="{{ static }}/js/bootstrap.min.js"></script>
+	<script src="{{ static }}/js/new-age.min.js"></script>
+	
+</body>
+
+</html>
