Criação do sistema de atualização de perfil de usuário

--- a/views/page_ativacao.html
+++ b/views/page_ativacao.html
@@ -15,6 +15,7 @@
 
 	{% if not msgs is defined %}
 	<h2>Você precisa ativar sua conta para prosseguir!</h2>
+	<h3>Siga as instruções enviadas para seu e-mail</h3>
 	<h3><a href="ativacao/reenviar">Reenviar e-mail de confirmação</a></h3>
 	{% endif %}
 
