--- a/views/page_termos.html
+++ b/views/page_termos.html
@@ -1,7 +1,7 @@
 {% extends "inc/base_simples.html" %}
 
 {% block title %}Termos{% endblock %}
-{% block titleheader %}Termos{% endblock %}
+{% block titleheader %}Termos de Uso{% endblock %}
 
 {% block main %}
 	<p><strong>Atenção, o Triz é um sistema em construção!</strong></p>
