Criação da área do desenvolvedor

--- a/views/form_conta_criar.html
+++ b/views/form_conta_criar.html
@@ -98,7 +98,7 @@
 		</div>
 	</fieldset>	
 	<div class="form-group">
-	<input type="submit" id="criar" value="Criar conta" class="btn btn-error btn-block rose" class="form-control">
+	<input type="submit" id="criar" value="Criar conta" class="btn btn-block rose" class="form-control">
 	</div>
 	<div class="row">
 		<p class="copyright text-center text-muted small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>
