--- a/views/inc/base.html
+++ b/views/inc/base.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
         {% block head %}
-		<title>{% block title %}{% endblock %} - Triz</title>
+		<title>{% block title %}{% endblock %} - Triz</title>		
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" type="image/png" href="{{ static }}/img/favicon.png" sizes="16x16">
 		<link rel="stylesheet" type="text/css" href="{{ static }}/css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="{{ static }}/css/bootstrap.min.css">
-		<style type="text/css">
-			.rose {		
-				background:url(../img/bg-pattern.png),#7b4397;background:url(../img/bg-pattern.png),-webkit-linear-gradient(to left,#7b4397,#dc2430);
-				background:url(../img/bg-pattern.png),linear-gradient(to left,#7b4397,#dc2430);
-				color:#fff;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="{{ static }}/css/bootstrap.min.css">	
+		<link rel="stylesheet" type="text/css" href="{{ static }}/css/triz.css">		
         {% endblock %}
     </head>
     <body>
@@ -33,5 +29,6 @@
 		{% endblock %}
 		<script src="{{ static }}/js/jquery.min.js"></script>
 		<script src="{{ static }}/js/bootstrap.min.js"></script>
+		<script src="{{ static }}/js/triz.js"></script>
     </body>
 </html>
