--- a/views/inc/base_simples.html
+++ b/views/inc/base_simples.html
@@ -4,40 +4,39 @@
         {% block head %}
 		<title>{% block title %}{% endblock %} - Triz</title>
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" type="image/png" href="{{ static }}/img/favicon.png" sizes="16x16">
 		<link rel="stylesheet" type="text/css" href="{{ static }}/css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="{{ static }}/css/bootstrap.min.css">
-		<style type="text/css">
-			.rose {		
-				background:url(../img/bg-pattern.png),#7b4397;background:url(../img/bg-pattern.png),-webkit-linear-gradient(to left,#7b4397,#dc2430);
-				background:url(../img/bg-pattern.png),linear-gradient(to left,#7b4397,#dc2430);
-				color:#fff;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="{{ static }}/css/bootstrap.min.css">	
+		<link rel="stylesheet" type="text/css" href="{{ static }}/css/triz.css">
         {% endblock %}
     </head>
     <body>
 		{% block body %}
-		<div class="container">		
-			<div class="row">		
-				<div class="col-lg-12">
-				<header>				
-					<h1 class="text-center"><a href="/" title="Ir para a página inicial do Triz"><img src="{{ static }}/img/marca/logo_256.png" alt="Triz" style="widht:64px;height:64"></a><h1>
-					<div class="page-header">
-						<h1>{% block titleheader %}Triz{% endblock %}</h1>
-					</div>
-				</header>
-				<main>
-					{% block main %}{% endblock %}		
-				</main>
-				<footer>				
-					<p class="copyright text-muted small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>			
-				</footer>
+		<div class="container">
+            <div class="row">
+                <div class="col-lg-12">			
+					<header>	
+						<div class="text-center">
+							<a href="/" title="Ir para a página inicial do Triz"><img src="{{ static }}/img/marca/logo_256.png" alt="Triz" style="widht:64px;height:64"></a>
+						</div>
+						<div class="page-header">
+							<h1>{% block titleheader %}Triz{% endblock %}</h1>
+						</div>
+					</header>
+					<main>
+						{% block main %}{% endblock %}		
+					</main>
+					<footer>				
+						<p class="copyright text-muted small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>		
+					</footer>	
 				</div>
 			</div>
 		</div>
 		{% endblock %}
 		<script src="{{ static }}/js/jquery.min.js"></script>
 		<script src="{{ static }}/js/bootstrap.min.js"></script>
+		<script src="{{ static }}/js/triz.js"></script>
     </body>
 </html>
