--- a/views/page_acesso.html
+++ b/views/page_acesso.html
@@ -1,7 +1,7 @@
-{% extends "inc/base_simples.html" %}
+{% extends "inc/base_usuario.html" %}
 
-{% block title %}Acessos a Conta{% endblock %}
-{% block titleheader %}Acessos a Conta{% endblock %}
+{% block title %}Acessos à Conta{% endblock %}
+{% block titleheader %}Acessos à Conta{% endblock %}
 
 {% block main %}    
 	<table class="table table-hover table-condensed">
