--- a/views/page_perfil.html
+++ b/views/page_perfil.html
@@ -1,6 +1,7 @@
-{% extends "inc/base.html" %}
+{% extends "inc/base_usuario.html" %}
 
 {% block title %}Perfil de {{nome}}{% endblock %}
+{% block titleheader %}{% endblock %}
 
 {% block head %}
 {{parent()}}
