--- a/views/form_perfil_editar.html
+++ b/views/form_perfil_editar.html
@@ -1,6 +1,7 @@
-{% extends "inc/base.html" %}
+{% extends "inc/base_usuario.html" %}
 
 {% block title %}Atualizar Perfil{% endblock %}
+{% block titleheader %}{% endblock %}
 
 {% block head %}
 {{parent()}}
@@ -33,7 +34,7 @@
 					<form action="/perfil/editar" method="POST" enctype="multipart/form-data">						
 						<div class="form-group">
 							<label for="imagem">Imagem de perfil</label>
-							<input type="file" name="imagem" accept="image/png, image/jpeg, image/jpg" class="btn btn-default">							
+							<input type="file" name="imagem" accept="image/png, image/jpeg, image/jpg" class="form-control btn btn-none" >							
 						</div>  
 						<div class="form-group">
 							<label for="ocupacao">Ocupação</label>
@@ -47,7 +48,7 @@
 							{% if biografia is not defined %}
 								{% set biografia = '' %}						
 							{% endif %}	
-							<textarea name="biografia" class="form-control" rows="3" placeholder="Fale um pouco sobre você...">{{biografia}}</textarea>
+							<textarea name="biografia" rows="3" placeholder="Fale um pouco sobre você..." class="form-control" >{{biografia}}</textarea>
 						</div>
 						<div class="form-group">
 							<div class="row">
