--- a/views/inc/base_usuario.html
+++ b/views/inc/base_usuario.html
@@ -1,3 +1,5 @@
+{% set ss = app.session.get('conta_usuario') %}
+{#{{ dump(ss) }}#}
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,22 +14,87 @@
 		<link rel="stylesheet" type="text/css" href="{{ static }}/css/triz.css">
         {% endblock %}
     </head>
-    <body>
-		{% block body %}
-		<div class="container">		
+    <body class="fixed-body">	
+		{% block body %} 
+		<nav class="navbar navbar-default navbar-fixed-top" style="background-color:white">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand"><img class="logo" alt="Triz" src="{{ static }}/img/marca/logo_256.png" height="20" width="20"></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/mural">Mural<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+		
+		<li class="dropdown">
+		
+		<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="height:50px;">	
+			<span class="img-circle" style="background:#fdcc52 url({{ducs}}/usuario/perfil/{{ss.imagem}}.{{ss.ext_imagem}});background-position:center;background-repeat:no-repeat;background-size:auto 24px;height:24px;width:24px;display:inline-block"></span>
+			<strong>{{ ss.nome }}</strong>
+			
+			<span class="caret"></span>
+		</a>
+		<ul class="dropdown-menu dropdown-user">			
+			<li class="dropdown-header">Ajustes</li>
+			<li><a href="/perfil/editar">Perfil</a></li>
+			<li><a href="/conta">Conta</a></li>
+			<li class="dropdown-header">Segurança</li>
+			<li><a href="/perfil">Senha</a></li>
+			<li><a href="/conta/acesso">Acessos</a></li>
+			<li class="divider"></li>
+			<li><a href="/sair">Sair do Triz</a></li>
+		</ul>		
+	</li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+		<div class="container">	
+			<div class="page-header">
+				<h1>{% block titleheader %}Triz{% endblock %}</h1>
+			</div>
 			<div class="row">		
-				<div class="col-lg-12">
-				<header>				
-					<h1 class="text-center"><a href="/" title="Ir para a página inicial do Triz"><img src="{{ static }}/img/marca/logo_256.png" alt="Triz" style="widht:64px;height:64"></a><h1>
-					<div class="page-header">
-						<h1>{% block titleheader %}Triz{% endblock %}</h1>
-					</div>
-				</header>
+				<div class="col-lg-12">				
 				<main>
 					{% block main %}{% endblock %}		
 				</main>
 				<footer>				
-					<p class="copyright text-muted small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>			
+					<p class="copyright text-muted text-center small">&copy {{ "now"|date("Y") }} Triz MPS. Todos os direitos reservados.</p>			
 				</footer>
 				</div>
 			</div>
