--- a/views/page_mural.html
+++ b/views/page_mural.html
@@ -1,32 +1,7 @@
-{% extends "inc/base.html" %}
+{% extends "inc/base_usuario.html" %}
 
-{% block title %}Mural de {{ nome }}{% endblock %}
+{% block title %}Mural de {{ ss.nome }}{% endblock %}
 
 {% block main %}
 
-        <img class="logo" src="{{ static }}/img/marca/logo_256.png">
-        Triz
-      
-      <a href="/mural" class="item">Mural</a>
-      <a href="/projeto/geral" class="item">Projetos</a>
-	
-  </div>
-	<li class="dropdown">
-		<a class="dropdown-toggle" data-toggle="dropdown" href="#">			
-			<div class="img-circle" style="background:#fdcc52 url({{ducs}}/usuario/perfil/{{ imagem }}.{{ ext_imagem }});background-position:center;background-repeat:no-repeat;background-size:auto 32px;height:32px;width:32px;display:inline-block"></div>
-			<h4 style="display:inline">{{ nome }}</h4>			
-			<span class="caret"></span>
-		</a>
-		<ul class="dropdown-menu dropdown-user">			
-			<li class="dropdown-header">Ajustes</li>
-			<li><a href="/perfil/editar">Perfil</a></li>
-			<li><a href="/conta">Conta</a></li>
-			<li class="dropdown-header">Segurança</li>
-			<li><a href="/perfil">Senha</a></li>
-			<li><a href="/conta">Acessos</a></li>
-			<li class="divider"></li>
-			<li><a href="/sair">Sair do Triz</a></li>
-		</ul>		
-	</li>
-	    
 {% endblock %}
