Criação de menu para ativo em andamento

--- a/views/form_conta_criar.html
+++ b/views/form_conta_criar.html
@@ -9,7 +9,7 @@
 			<div class="panel panel-none">	
 			<div class="panel-heading text-center">		
 		<a href="/"><img src="{{ static }}/img/marca/logo_256.png" alt="Triz" style="widht:64px;height:64"></a>
-<h1>Criar sua conta Triz</h1>
+<h1>Crie sua conta Triz</h1>
 </div>
 <div class="panel-body">
 
