--- a/views/page_mural.html
+++ b/views/page_mural.html
@@ -1,6 +1,6 @@
 {% extends "inc/base_usuario.html" %}
 
-{% block title %}Mural de {{ ss.nome }}{% endblock %}
+{% block title %}Mural{% endblock %}
 
 {% block main %}
 
