--- a/views/inc/base_usuario.html
+++ b/views/inc/base_usuario.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="{{ static }}/css/triz.css">
         {% endblock %}
     </head>
-    <body class="fixed-body">	
+    <body class="fixed-body" style="background-color:white">	
 		{% block body %} 
 		<nav class="navbar navbar-default navbar-fixed-top" style="background-color:white">
   <div class="container-fluid">
@@ -26,47 +26,35 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand"><img class="logo" alt="Triz" src="{{ static }}/img/marca/logo_256.png" height="20" width="20"></a>
+      <a href="/" class="navbar-brand"><img class="logo" alt="Triz" src="{{ static }}/img/marca/logo_256.png" height="20" width="20"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/mural">Mural<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        <li><a href="/">Mural</a></li>        
+		<li><a href="/perfil">Perfil</a></li>        
+		<li class="dropdown">		
+		<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="height:50px;">	
+			Projetos<span class="caret"></span>
+		</a>
+		<ul class="dropdown-menu">	
+			<li><a href="/sair">Todos</a></li>		
+			<li class="divider"></li>
+			<li class="dropdown-header">Em andamento</li>
+			<li><a href="/sair">SIGECOMV</a></li>
+			<li><a href="/sair">XPROMO</a></li>
+			 <li class="disabled"><a href="">Nenhum projeto em andamento</a></li>
+		</ul>		
+	</li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-		
-		<li class="dropdown">
-		
+        
+		<li class="dropdown">		
 		<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="height:50px;">	
-			<span class="img-circle" style="background:#fdcc52 url({{ducs}}/usuario/perfil/{{ss.imagem}}.{{ss.ext_imagem}});background-position:center;background-repeat:no-repeat;background-size:auto 24px;height:24px;width:24px;display:inline-block"></span>
-			<strong>{{ ss.nome }}</strong>
-			
+			<!--<span class="img-circle" style="background:#fdcc52 url({{ducs}}/usuario/perfil/{{ss.imagem}}.{{ss.ext_imagem}});background-position:center;background-repeat:no-repeat;background-size:auto 24px;height:24px;width:24px;display:inline-block"></span>-->
+			<strong>{{ ss.nome }}</strong>		
 			<span class="caret"></span>
 		</a>
 		<ul class="dropdown-menu dropdown-user">			
@@ -82,12 +70,49 @@
 	</li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  </div><!-- /.container-fluid -->  
+ 
 </nav>
+
+
+<div class="container-fluid rose">
+	<div class="row">
+		<div class="col-lg-12">
+			<h3>Sistema de Gestão Comercial de Varejo e Atacado Internacional</h3>
+			
+	</div>
+	
+	</div>
+	
+</div>
+
+
+  <div class="container-fluid">
+    
+    
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span><strong>Opções</strong>
+      </button> 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2" >
+      <ul class="nav navbar-nav">
+        <li><a href="/projeto/sigecomv/geral">Geral</a></li>
+        <li><a href="/projeto/sigecomv/membros">Membros</a></li>
+		<li><a href="/perfil">Backlog</a></li>   
+		<li><a href="/perfil">Releases</a></li>   
+		<li><a href="/">Sprints</a></li>
+        <li><a href="/projeto">Quadro</a></li>
+		<li><a href="/perfil">Orçamento</a></li>   
+		<li><a href="/perfil">Relatórios</a></li> 
+		<li><a href="/perfil">Configurações</a></li> 
+		
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->  
+
+
 		<div class="container">	
-			<div class="page-header">
-				<h1>{% block titleheader %}Triz{% endblock %}</h1>
-			</div>
+			
 			<div class="row">		
 				<div class="col-lg-12">				
 				<main>
