--- a/views/page_acesso.html
+++ b/views/page_acesso.html
@@ -3,23 +3,25 @@
 {% block title %}Acessos à Conta{% endblock %}
 {% block titleheader %}Acessos à Conta{% endblock %}
 
-{% block main %}    
-	<table class="table table-hover table-condensed">
-	  <thead>
-		<tr>
-		  <th>Data</th>
-		  <th>Hora</th>
-		  <th>IP</th>
-		</tr>
-	  </thead>
-	  <tbody>
-		{% for r in rs %}
-		<tr>
-		  <td>{{ r.ts_entrada|date("d/m/Y") }}</td>
-		  <td>{{ r.ts_entrada|date("H:i:s") }}</td>
-		  <td>{{ r.remote_addr }}</td>
-		</tr>	
-		{% endfor %}
-	  </tbody>
-	</table>    
+{% block main %}
+	<div class="table-responsive">
+		<table class="table table-hover table-condensed">
+		  <thead>
+			<tr>
+			  <th>Data</th>
+			  <th>Hora</th>
+			  <th>IP</th>
+			</tr>
+		  </thead>
+		  <tbody>
+			{% for r in rs %}
+			<tr>
+			  <td>{{ r.ts_entrada|date("d/m/Y") }}</td>
+			  <td>{{ r.ts_entrada|date("H:i:s") }}</td>
+			  <td>{{ r.remote_addr }}</td>
+			</tr>	
+			{% endfor %}
+		  </tbody>
+		</table>
+	</div>
 {% endblock %}
