--- a/views/inc/base_projeto.html
+++ b/views/inc/base_projeto.html
@@ -34,19 +34,8 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Mural</a></li>        
 		<li><a href="/perfil">Perfil</a></li>        
-		<li class="dropdown">		
-		<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="height:50px;">	
-			Projetos<span class="caret"></span>
-		</a>
-		<ul class="dropdown-menu">	
-			<li><a href="/projeto/todos">Todos</a></li>		
-			<li class="divider"></li>
-			<li class="dropdown-header">Em andamento</li>
-			<li><a href="/sair">SIGECOMV</a></li>
-			<li><a href="/sair">XPROMO</a></li>
-			 <li class="disabled"><a href="">Nenhum projeto em andamento</a></li>
-		</ul>		
-	</li>
+			
+	
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
@@ -78,7 +67,7 @@
 <div class="container-fluid rose">
 	<div class="row">
 		<div class="col-lg-12">
-			<h3>Sistema de Gestão Comercial de Varejo e Atacado Internacional</h3>
+			<h3>{{p.titulo}}</h3>
 			
 	</div>
 	
@@ -96,15 +85,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2" >
       <ul class="nav navbar-nav">
-        <li><a href="/projeto/sigecomv/geral">Geral</a></li>
-        <li><a href="/projeto/sigecomv/membros">Membros</a></li>
-		<li><a href="/perfil">Backlog</a></li>   
-		<li><a href="/perfil">Releases</a></li>   
-		<li><a href="/">Sprints</a></li>
-        <li><a href="/projeto">Quadro</a></li>
-		<li><a href="/perfil">Orçamento</a></li>   
-		<li><a href="/perfil">Relatórios</a></li> 
-		<li><a href="/perfil">Configurações</a></li> 
+        <li><a href="/projeto/{{p.dominio}}/geral">Geral</a></li>
+        <li><a href="/projeto/{{p.dominio}}/membros">Membros</a></li>
+		<li><a href="/projeto/{{p.dominio}}/backlog">Backlog</a></li>   
+		<li><a href="/projeto/{{p.dominio}}/releases">Releases</a></li>   
+		<li><a href="/projeto/{{p.dominio}}/sprints">Sprints</a></li>
+        <li><a href="/projeto/{{p.dominio}}/quadro">Quadro</a></li>		
+		<li><a href="/projeto/{{p.dominio}}/relatorios">Relatórios</a></li> 
+		<li style="background-color:#fcf8ee"><a href="/projeto/{{p.dominio}}/configuracoes">Configurações</a></li> 
 		
       </ul>
     </div><!-- /.navbar-collapse -->
