--- a/views/inc/base_usuario.html
+++ b/views/inc/base_usuario.html
@@ -34,19 +34,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Mural</a></li>        
 		<li><a href="/perfil">Perfil</a></li>        
-		<li class="dropdown">		
-		<a class="dropdown-toggle" data-toggle="dropdown" href="#" style="height:50px;">	
-			Projetos<span class="caret"></span>
-		</a>
-		<ul class="dropdown-menu">	
-			<li><a href="/projeto/todos">Todos</a></li>		
-			<li class="divider"></li>
-			<li class="dropdown-header">Em andamento</li>
-			<li><a href="/sair">SIGECOMV</a></li>
-			<li><a href="/sair">XPROMO</a></li>
-			 <li class="disabled"><a href="">Nenhum projeto em andamento</a></li>
-		</ul>		
-	</li>
+		<li><a href="/projeto">Projetos</a></li>  
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
