--- a/views/page_projeto_d_configuracoes.html
+++ b/views/page_projeto_d_configuracoes.html
@@ -12,11 +12,11 @@
 
 {% block main %}
 <div class="row">
-	
+	<div class="col-lg-12">
 		<div class="page-header">
 			<h4><strong>Configurações</strong></h4>
 		</div>
-	
+	</div>
 </div>
 <div class="row">
 	<div class="col-lg-2" style="background-color:#fbfbfb;border-right: 1px solid #eee;">
