Criação da área para seleção de relatórios

--- a/views/inc/page_projeto_d_configuracoes_sobre.html
+++ b/views/inc/page_projeto_d_configuracoes_sobre.html
@@ -9,11 +9,11 @@
 		</tr>
 		<tr>
 		  <th>Situação</th>
-		  <td><span class="text-uppercase">{{s}}</span></td>		  
+		  <td><span class="text-uppercase">{{p.s}}</span></td>		  
 		</tr>
 		<tr>
 		  <th>Visibilidade</th>
-		  <td><span class="text-uppercase">{{v}}</span></td>		  
+		  <td><span class="text-uppercase">{{p.v}}</span></td>		  
 		</tr>		
 		<tr>
 		  <th>Criado por</th>
