--- a/views/inc/page_projeto_d_configuracoes_cancelamento.html
+++ b/views/inc/page_projeto_d_configuracoes_cancelamento.html
@@ -1,3 +1,3 @@
 <h4>Cancelamento</h4>
 <p>O projeto {{ p.dominio }} falhou?! Que pena!</p>
-<a href="configuracoes/cancelamento/cancelar" class="btn btn-danger btn-large active">Cancelar projeto permanentemente</a>
+<a href="configuracoes/cancelamento/cancelar" class="btn btn-danger btn-large active {% if p.situacao != 0 %}disabled{% endif %}">Cancelar projeto permanentemente</a>
