Criação da página de visualização de conta e alteração de senha

--- a/views/inc/base_usuario.html
+++ b/views/inc/base_usuario.html
@@ -48,9 +48,9 @@
 		<ul class="dropdown-menu dropdown-user">			
 			<li class="dropdown-header">Ajustes</li>
 			<li><a href="/perfil/editar">Perfil</a></li>
-			<li><a href="/conta">Conta</a></li>
+			<li><a href="/conta/ver">Conta</a></li>
 			<li class="dropdown-header">Segurança</li>
-			<li><a href="/perfil">Senha</a></li>
+			<li><a href="/conta/senha">Senha</a></li>
 			<li><a href="/conta/acesso">Acessos</a></li>
 			<li class="divider"></li>
 			<li><a href="/sair">Sair do Triz</a></li>
