--- a/views/page_acesso.html
+++ b/views/page_acesso.html
@@ -1,7 +1,7 @@
 {% extends "inc/base_usuario.html" %}
 
 {% block title %}Acessos à Conta{% endblock %}
-{% block titleheader %}Acessos à Conta{% endblock %}
+{% block titleheader %}<h1>Acessos à Conta</h1>{% endblock %}
 
 {% block main %}
 	<div class="table-responsive">
