--- a/static/css/triz.css
+++ b/static/css/triz.css
@@ -20,3 +20,11 @@ body.fixed-body {
 .black{
   color: #000;
 }
+.table-borderless tbody tr td,
+.table-borderless tbody tr th,
+.table-borderless thead tr th,
+.table-borderless thead tr td,
+.table-borderless tfoot tr th,
+.table-borderless tfoot tr td {
+    border: none;
+}
