--- a/views/page_perfil.html
+++ b/views/page_perfil.html
@@ -19,7 +19,7 @@
 		<div class="col-md-8 col-md-offset-2">
 			<div class="panel panel-none">
 				<div class="panel-heading text-center">					
-					<div class="img-circle" style="background:#fdcc52 url({{ducs}}/usuario/perfil/{{ imagem }}.{{ ext_imagem }});background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div>
+					<div class="img-circle" style="background-color:#feeab9; background-image: url({{ducs}}/usuario/perfil/{{ imagem }}.{{ ext_imagem }}), url({{static}}/img/usuario_128.png);background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div>
 					<h1>{{ nome|upper }} {{ sobrenome|upper }}</h1>
 					<h3 class="text-muted">{{ ocupacao }}</h3>
 				</div>
