--- a/views/form_perfil_editar.html
+++ b/views/form_perfil_editar.html
@@ -27,7 +27,7 @@
 						{% set imagem = 'usuario_preto' %}
 						{% set ext_imagem = 'png' %}
 					{% endif %}
-					<div class="img-circle" style="background:#fdcc52 url({{ducs}}/usuario/perfil/{{ imagem }}.{{ ext_imagem }});background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div>
+					<div class="img-circle" style="background-color:#feeab9; background-image: url({{ducs}}/usuario/perfil/{{ imagem }}.{{ ext_imagem }}), url({{static}}/img/usuario_128.png);background-position:center;background-repeat:no-repeat;background-size:auto 128px;height:128px;width:128px;display:inline-block"></div>
 					<h1>{{ nome|upper }} {{ sobrenome|upper }}</h1>									
 				</div>
 				<div class="panel-body">
