--- a/views/form_senha.html
+++ b/views/form_senha.html
@@ -1,8 +1,31 @@
 {% extends "inc/base_usuario.html" %}
 
 {% block title %}Senha da Conta{% endblock %}
-{% block titleheader %}<h1>Alteração de Senha</h1>{% endblock %}
+{% block titleheader %}<h1>Senha</h1>{% endblock %}
 
 {% block main %}
-	
+<div class="row">
+	<div class="col-lg-4">
+		<form action="/conta/senha" method="POST">
+			<div class="form-group">
+				<label for="atual">Senha atual</label>
+				<input type="password" id="atual" name="atual" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="nova">Senha nova</label>
+				<input type="password" id="nova" name="nova" class="form-control">
+			</div>
+			<div class="form-group">
+				<label for="confirma">Repetir senha nova</label>
+				<input type="password" id="confirma" name="confirm" class="form-control">
+			</div>
+			<div class="form-group text-right">
+				<input type="submit" value="Alterar senha" class="btn btn-danger rose">
+			</div>
+		</form>
+	</div>
+	<div class="col-lg-8">
+
+	</div>
+</div>
 {% endblock %}
