--- a/views/inc/base_projeto.html
+++ b/views/inc/base_projeto.html
@@ -34,7 +34,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Mural</a></li>        
 		<li><a href="/perfil">Perfil</a></li>        
-			
+		<li><a href="/projeto">Projetos</a></li>        
 	
       </ul>
       
