--- a/views/inc/page_projeto_d_configuracoes_desativacao.html
+++ b/views/inc/page_projeto_d_configuracoes_desativacao.html
@@ -1,3 +1,3 @@
 <h4>Desativação</h4>
 <p>O projeto {{ p.dominio }} terminou?</p>
-<a href="configuracoes/desativacao/concluir" class="btn btn-primary btn-large active {% if p.situacao != 0 %}disabled{% endif %}">Concluir projeto permanentemente</a>
+<a href="/projeto/{{p.dominio}}/configuracoes/desativacao/concluir" class="btn btn-primary btn-large active {% if p.situacao != 0 %}disabled{% endif %}">Concluir projeto permanentemente</a>
