--- a/views/page_projeto_todos.html
+++ b/views/page_projeto_todos.html
@@ -13,11 +13,15 @@
 {% block main %}
 <ul class="nav nav-pills" style="display:inline">
   <li role="presentation"></li>
-  <li role="presentation"><a href="andamento">Em andamento <span class="label label-primary"></span></a></li>
-  <li role="presentation"><a href="concluidos">Concluídos <span class="label label-success"></span></a></li>
-  <li role="presentation"><a href="cancelados">Cancelados <span class="label label-danger"></span></a></li>
-  <li role="presentation"><a href="todos">Todos <span class="label label-default"></span></a></li>
+  <li role="presentation"><a href="andamento" style="color:#0000FF;">Em andamento <span class="label label-primary"></span></a></li>
+  <li role="presentation"><a href="concluidos" style="color:#006400;">Concluídos <span class="label label-success"></span></a></li>
+  <li role="presentation"><a href="cancelados" style="color:#8B0000">Cancelados <span class="label label-danger"></span></a></li>
+  <li role="presentation"><a href="todos" style="color:black">Todos <span class="label label-default"></span></a></li>
 </ul>
+
+{% if projetos is empty %}
+<div class="well well-sm" style="margin-top:10px">Nenhum projeto encontrado na seção atual</div>
+{% endif %}
 
 <ul class="media-list" style="margin-top:10px">
 {% for p in projetos %}
@@ -28,17 +32,17 @@
 	<div class="col-lg-11">
     <div class="media-left">
       <a href="/projeto/{{p.dominio}}">
-		<span class="media-object" src="..." alt="..." style="background:#fdcc52 url({{ducs}}/projeto/perfil/{{ss.imagem}}.{{ss.ext_imagem}});background-position:center;background-repeat:no-repeat;background-size:auto 64px;height:64px;width:64px;">
+		<span class="media-object" src="..." alt="..." style="background-color: #feeab9; background-image: url({{ducs}}/projeto/perfil/{{ss.imagem}}.{{ss.ext_imagem}}), url({{static}}/img/projeto_64.png);background-position:center;background-repeat:no-repeat;background-size:auto 64px;height:64px;width:64px;">
       </a>
     </div>
     <div class="media-body">
-      <h4 class="media-heading"><a href="/projeto/{{p.dominio}}">{{p.titulo}}</a></h4>	 
-      <small><a href="/perfil/{{p.id_conta_usuario}}" class="text-muted">{{p.nome}}</a> | {{p.ts_criacao|date("d/m/Y H:i")}}</small>
-	  <p><a href="/projeto/{{p.dominio}}">{{p.dominio}}</a></p>
+      <h4 class="media-heading"><a href="/projeto/{{p.dominio}}" style="color:{% if p.situacao == 0 %}#0000FF{% elseif p.situacao == 1 %}#006400{% elseif p.situacao == 2 %}#8B0000{%endif%}">{{p.titulo}}</a></h4>	 
+      <small style="color:#696969"><img src="{{static}}/img/{% if p.visibilidade == 1 %}privado{% elseif p.visibilidade ==2 %}publico{%endif%}_16.png" height="10px" width="10px"> | {{p.ts_criacao|date("d/m/Y H:i")}} | <a href="/perfil/{{p.id_conta_usuario}}" style="color:#696969">{{p.nome}}</a></small>
+	  <p><a href="/projeto/{{p.dominio}}" style="color:#696969">{{p.dominio}}</a></p>
     </div>
 	</div>
 	<div class="col-lg-1 text-right">
-		<a href="/projeto/{{p.dominio}}/configuracoes"><img src="{{ static }}/img/configuracoes_64.png" title="Ir para as configurações do {{p.dominio}}" height="20" width="20"></a>
+		<a href="/projeto/{{p.dominio}}/configuracoes"><img src="{{ static }}/img/configuracoes_24.png" title="Ir para as configurações do {{p.dominio}}" height="16px" width="16px"></a>
 	</div>
 	</div>
 	 </div>
